testProject/force-app/main/default/objects/Mortgage__c/Mortgage__c.object-meta.xml
<CustomObject>
    <label>Mortgage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Lender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>