testProject/force-app/main/default/objects/Mortgage__c/fields/Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Borrowers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>