testProject/force-app/main/default/objects/Mortgage__c/fields/Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>Recording_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recording Date</label>
    <type>DateTime</type>
</CustomField>